# gihex_editor

./: Cargo.toml  build.rs  todo.md
.github/workflows/: ci_rel.yml  ci_rust.yml
src/: gihex_editor.gresource.xml  main.rs
src/gtk/: help-overlay.ui
src/ui/: application.rs  mod.rs  new_popover.rs  window.rs
src/ui/menu/: export_menu.rs  mod.rs
src/ui/xml/: export_menu.ui  main_menu.ui  new_menu.ui  new_popover.ui  window.ui
